4680 Webpack is set, subtheme is working on the site

--- a/web/themes/custom/subtheme/package.json
+++ b/web/themes/custom/subtheme/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "watch": "webpack --mode production --watch"
+    "prod": "webpack --mode production",
+    "watch": "webpack --mode production --watch",
+    "serv": "webpack-dev-server --open --mode development "
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,22 @@
   "homepage": "https://github.com/Nuke22/dev-branch-intensive-d4d#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^10.2.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
-  }
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "babel-loader": "^8.2.5",
+    "har-validator": "^5.1.5"
+  },
+  "main": "index.js"
 }
