--- a/web/themes/custom/subtheme/subtheme.info.yml
+++ b/web/themes/custom/subtheme/subtheme.info.yml
@@ -3,3 +3,5 @@ type: theme
 base theme: olivero
 description: 'My custom theme'
 core_version_requirement: '^8.9 || ^9'
+libraries:
+  - subtheme/global-styling
