--- a/config_files/core.extension.yml
+++ b/config_files/core.extension.yml
@@ -34,6 +34,7 @@ module:
   media: 0
   media_bulk_upload: 0
   media_bulk_upload_dropzonejs: 0
+  media_library: 0
   menu_link_content: 0
   menu_ui: 0
   node: 0
