4702 intermediate results with theming. SVG icons are added along with global styling and some header styling

--- a/web/themes/custom/subtheme/package.json
+++ b/web/themes/custom/subtheme/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "prod": "webpack --mode production",
-    "watch": "webpack --mode production --watch",
+    "watch": "webpack --mode development --watch",
     "serv": "webpack-dev-server --open --mode development "
   },
   "repository": {
