--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,13 @@
     "require": {
         "composer/installers": "^1.9",
         "drupal/admin_toolbar": "^3.1",
+        "drupal/block_classes": "^1.0",
         "drupal/bootstrap5": "^1.1",
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-project-message": "^9.3",
         "drupal/core-recommended": "^9.3",
         "drupal/dropzonejs": "^2.6",
-        "drupal/layout_builder_styles": "^1.0@beta",
+        "drupal/layout_builder_component_attributes": "^2.0",
         "drupal/media_bulk_upload": "^3.0",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.14",
