--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "drupal/core-project-message": "^9.3",
         "drupal/core-recommended": "^9.3",
         "drupal/dropzonejs": "^2.6",
-        "drupal/layout_builder_component_attributes": "^2.0",
+        "drupal/layout_builder_styles": "^1.0@beta",
         "drupal/media_bulk_upload": "^3.0",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.14",
@@ -111,8 +111,5 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
-    },
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.6"
     }
 }
