4702 Coding standards has been fixed via Stylelint, base theme's big part was turned off due to it's malignancy

--- a/web/themes/custom/subtheme/subtheme.info.yml
+++ b/web/themes/custom/subtheme/subtheme.info.yml
@@ -5,3 +5,6 @@ description: 'My custom theme'
 core_version_requirement: '^8.9 || ^9'
 libraries:
   - subtheme/global-styling
+
+libraries-override:
+  olivero/global-styling: FALSE
