--- a/config_files/core.entity_view_display.node.category_page.full.yml
+++ b/config_files/core.entity_view_display.node.category_page.full.yml
@@ -6,13 +6,17 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.category_page.field_category
     - node.type.category_page
+    - system.menu.header-left-menu
+    - system.menu.header-right-menu
+    - system.menu.main
     - system.menu.menupage-menu
     - views.view.article_by_category
     - views.view.article_by_category_highlighted_top_
+    - views.view.menupage_page_s_name
     - views.view.menupage_popular_
   content:
     - 'block_content:image_only:806dd0a3-1c37-42aa-8a12-9bf36b2d3b46'
-    - 'block_content:link_only_block_type:49a48140-afd1-4993-8cde-58ac9fa8da57'
+    - 'block_content:logo_block_type:66b1c194-403a-43f3-8a34-13659da3c11f'
   module:
     - block_content
     - layout_builder
@@ -28,8 +32,109 @@ third_party_settings:
       -
         layout_id: layout_onecol
         layout_settings:
-          label: Head
+          label: Header
           context_mapping: {  }
+          layout_builder_styles_style:
+            - custom_header
+        components:
+          dda31243-75f5-486b-8196-61074cf8309f:
+            uuid: dda31243-75f5-486b-8196-61074cf8309f
+            region: content
+            configuration:
+              id: 'system_menu_block:header-left-menu'
+              label: 'Header | left menu'
+              label_display: '0'
+              provider: system
+              context_mapping: {  }
+              level: 1
+              depth: 0
+              expand_all_items: false
+            weight: 0
+            additional:
+              layout_builder_styles_style: {  }
+          8e00df59-fbd4-4edd-b5b7-98ba3c9793f0:
+            uuid: 8e00df59-fbd4-4edd-b5b7-98ba3c9793f0
+            region: content
+            configuration:
+              id: 'block_content:66b1c194-403a-43f3-8a34-13659da3c11f'
+              label: 'Logo | News Week MAIN'
+              label_display: '0'
+              provider: block_content
+              status: true
+              info: ''
+              view_mode: full
+              context_mapping: {  }
+            weight: 1
+            additional:
+              layout_builder_styles_style:
+                - logo
+          e6123f13-0579-4455-871d-5fec79f9ee38:
+            uuid: e6123f13-0579-4455-871d-5fec79f9ee38
+            region: content
+            configuration:
+              id: 'system_menu_block:header-right-menu'
+              label: 'Header | right menu'
+              label_display: '0'
+              provider: system
+              context_mapping: {  }
+              level: 1
+              depth: 0
+              expand_all_items: false
+            weight: 2
+            additional:
+              layout_builder_styles_style: {  }
+        third_party_settings: {  }
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: 'Primary menu'
+          context_mapping: {  }
+          layout_builder_styles_style: {  }
+        components:
+          233e489c-ac33-4666-9f6a-abe48311421d:
+            uuid: 233e489c-ac33-4666-9f6a-abe48311421d
+            region: content
+            configuration:
+              id: 'system_menu_block:main'
+              label: 'Main navigation'
+              label_display: '0'
+              provider: system
+              context_mapping: {  }
+              level: 1
+              depth: 0
+              expand_all_items: false
+            weight: 0
+            additional:
+              layout_builder_styles_style: {  }
+        third_party_settings: {  }
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: 'Menupage: page''s name'
+          context_mapping: {  }
+          layout_builder_styles_style: {  }
+        components:
+          837cd357-50ae-4ea7-8e96-f45df820133c:
+            uuid: 837cd357-50ae-4ea7-8e96-f45df820133c
+            region: content
+            configuration:
+              id: 'views_block:menupage_page_s_name-block_1'
+              label: ''
+              label_display: '0'
+              provider: views
+              context_mapping: {  }
+              views_label: ''
+              items_per_page: none
+            weight: 0
+            additional:
+              layout_builder_styles_style: menupage_page_s_name
+        third_party_settings: {  }
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: 'Secondary menu'
+          context_mapping: {  }
+          layout_builder_styles_style: {  }
         components:
           b3c5c83b-85df-4052-a010-71b7054fcb25:
             uuid: b3c5c83b-85df-4052-a010-71b7054fcb25
@@ -44,7 +149,8 @@ third_party_settings:
               depth: 0
               expand_all_items: false
             weight: 0
-            additional: {  }
+            additional:
+              layout_builder_styles_style: menupage_secondary_menu
         third_party_settings: {  }
       -
         layout_id: layout_onecol
