--- a/config_files/core.extension.yml
+++ b/config_files/core.extension.yml
@@ -6,6 +6,7 @@ module:
   automated_cron: 0
   big_pipe: 0
   block: 0
+  block_classes: 0
   block_content: 0
   breakpoint: 0
   ckeditor: 0
@@ -29,6 +30,7 @@ module:
   history: 0
   image: 0
   layout_builder: 0
+  layout_builder_styles: 0
   layout_discovery: 0
   link: 0
   media: 0
