--- a/config_files/views.settings.yml
+++ b/config_files/views.settings.yml
@@ -6,13 +6,13 @@ sql_signature: false
 ui:
   show:
     additional_queries: false
-    advanced_column: false
+    advanced_column: true
     default_display: false
-    performance_statistics: true
+    performance_statistics: false
     preview_information: true
     sql_query:
-      enabled: false
-      where: above
+      enabled: true
+      where: below
     display_embed: false
   always_live_preview: true
   exposed_filter_any_label: old_any
