--- a/config_files/page_manager.page_variant.frontpage_pm-layout_builder-0.yml
+++ b/config_files/page_manager.page_variant.frontpage_pm-layout_builder-0.yml
@@ -157,6 +157,7 @@ variant_settings:
       layout_settings:
         label: 'Highlighted nodes'
         context_mapping: {  }
+        layout_builder_styles_style: custom_fp_highlighted
       components:
         6023863f-351f-4216-8fa8-f37a3b8812e5:
           uuid: 6023863f-351f-4216-8fa8-f37a3b8812e5
@@ -211,13 +212,14 @@ variant_settings:
           configuration:
             id: 'views_block:main_content_frnotpage_first-block_1'
             label: ''
-            label_display: visible
+            label_display: '0'
             provider: views
             context_mapping: {  }
             views_label: ''
             items_per_page: none
           weight: 0
-          additional: {  }
+          additional:
+            layout_builder_styles_style: ''
       third_party_settings: {  }
     -
       layout_id: layout_onecol
