--- a/web/themes/custom/subtheme/package.json
+++ b/web/themes/custom/subtheme/package.json
@@ -31,6 +31,7 @@
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
+    "prettier": "2.6.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.8.2",
