--- a/config_files/views.view.frontpage_highlighted_random_nodes_.yml
+++ b/config_files/views.view.frontpage_highlighted_random_nodes_.yml
@@ -293,6 +293,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
+      css_class: views-custom-random-nodes
       use_ajax: true
       header: {  }
       footer: {  }
