--- a/web/themes/custom/subtheme/subtheme.info.yml
+++ b/web/themes/custom/subtheme/subtheme.info.yml
@@ -8,3 +8,8 @@ libraries:
 
 libraries-override:
   olivero/global-styling: FALSE
+
+regions:
+  header: 'Header'
+  content: 'Content'
+  footer_top: 'Footer'
