--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/core-project-message": "^9.3",
         "drupal/core-recommended": "^9.3",
         "drupal/dropzonejs": "^2.6",
+        "drupal/fontawesome": "^2.23",
         "drupal/layout_builder_styles": "^1.0@beta",
         "drupal/media_bulk_upload": "^3.0",
         "drupal/page_manager": "^4.0@beta",
