--- a/config_files/core.entity_view_display.node.article.full.yml
+++ b/config_files/core.entity_view_display.node.article.full.yml
@@ -14,9 +14,13 @@ dependencies:
     - field.field.node.article.field_trending_tags
     - image.style.large
     - node.type.article
+    - system.menu.header-left-menu
+    - system.menu.header-right-menu
+    - system.menu.main
     - views.view.nodepage_sidebar_popular_
   content:
     - 'block_content:image_only:806dd0a3-1c37-42aa-8a12-9bf36b2d3b46'
+    - 'block_content:logo_block_type:66b1c194-403a-43f3-8a34-13659da3c11f'
   module:
     - block_content
     - comment
@@ -24,6 +28,7 @@ dependencies:
     - layout_builder
     - layout_discovery
     - media
+    - system
     - user
     - views
 third_party_settings:
@@ -31,6 +36,82 @@ third_party_settings:
     enabled: true
     allow_custom: false
     sections:
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: Header
+          context_mapping: {  }
+          layout_builder_styles_style: custom_header
+        components:
+          ac97479d-8897-44ce-bd3b-95b23ac8f6cb:
+            uuid: ac97479d-8897-44ce-bd3b-95b23ac8f6cb
+            region: content
+            configuration:
+              id: 'system_menu_block:header-left-menu'
+              label: 'Header | left menu'
+              label_display: '0'
+              provider: system
+              context_mapping: {  }
+              level: 1
+              depth: 0
+              expand_all_items: false
+            weight: 0
+            additional:
+              layout_builder_styles_style: ''
+          a366e595-bd72-4777-a3d3-06938918f803:
+            uuid: a366e595-bd72-4777-a3d3-06938918f803
+            region: content
+            configuration:
+              id: 'block_content:66b1c194-403a-43f3-8a34-13659da3c11f'
+              label: 'Logo | News Week MAIN'
+              label_display: '0'
+              provider: block_content
+              status: true
+              info: ''
+              view_mode: full
+              context_mapping: {  }
+            weight: 1
+            additional:
+              layout_builder_styles_style: logo
+          9346aafb-5fbf-4cc9-a14f-c6792483fbfc:
+            uuid: 9346aafb-5fbf-4cc9-a14f-c6792483fbfc
+            region: content
+            configuration:
+              id: 'system_menu_block:header-right-menu'
+              label: 'Header | right menu'
+              label_display: '0'
+              provider: system
+              context_mapping: {  }
+              level: 1
+              depth: 0
+              expand_all_items: false
+            weight: 2
+            additional:
+              layout_builder_styles_style: ''
+        third_party_settings: {  }
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: 'Primary menu'
+          context_mapping: {  }
+          layout_builder_styles_style: custom_primary_menu
+        components:
+          fc7d81ce-60d1-4216-b424-dc7da31b8bda:
+            uuid: fc7d81ce-60d1-4216-b424-dc7da31b8bda
+            region: content
+            configuration:
+              id: 'system_menu_block:main'
+              label: 'Main navigation'
+              label_display: '0'
+              provider: system
+              context_mapping: {  }
+              level: 1
+              depth: 0
+              expand_all_items: false
+            weight: 0
+            additional:
+              layout_builder_styles_style: ''
+        third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings:
