--- a/config_files/views.settings.yml
+++ b/config_files/views.settings.yml
@@ -12,7 +12,7 @@ ui:
     preview_information: true
     sql_query:
       enabled: true
-      where: below
+      where: above
     display_embed: false
   always_live_preview: true
   exposed_filter_any_label: old_any
